--- a/css/main.css
+++ b/css/main.css
@@ -41,3 +41,15 @@ ul.posts {
 ul.posts li {
     list-style: none;
 }
+.header img {
+  float: left;
+  width: 100px;
+  height: 100px;
+  background: #555;
+}
+
+.header h1 {
+  position: relative;
+  top: 18px;
+  left: 10px;
+}
