--- a/css/main.css
+++ b/css/main.css
@@ -42,10 +42,10 @@ ul.posts li {
     list-style: none;
 }
 .header img {
-  float: left;
+  float: right;
   width: 100px;
   height: 100px;
-  background: #555;
+  background: white;
 }
 
 .header h1 {
